# Spike

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.bat  build.sh  pull_git_submodules.sh
src/: CMakeLists.txt  ISampleImpl.h  SampleImplMock.h  SampleStateMachine.cpp  SampleStateMachine.h  SampleStateMachineTest.cpp
